<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature_export_title"
        android:padding="10dp"
        android:fontFamily="roboto"
        android:textColor="@android:color/black"
        android:textSize="15dp"
        android:textStyle="normal"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/signature_format_as_acquired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_signature_format_as_acquired"/>

        <RadioButton
            android:id="@+id/signature_format_fss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_signature_format_fss"/>

        <RadioButton
            android:id="@+id/signature_format_iso_binary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_signature_format_iso_binary"/>

        <RadioButton
            android:id="@+id/signature_format_iso_2014_binary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_signature_format_iso_2014_binary"/>

        <RadioButton
            android:id="@+id/signature_format_iso_xml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_signature_format_iso_xml"/>

    </RadioGroup>

</LinearLayout>